write html for landing page using rails helpers

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="landing-container">
+	
+<%= image_tag("logo.png", alt: "Black Gold", class: "landing-logo") %>
+
+<%= link_to("Sign Up with Email", users_new_path, class: "email-login-button") %>
+
+</div>
