--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+/*Default is mobile styling*/
+
 html, body {
 	margin: 0;
 	text-align: center;
@@ -17,8 +19,8 @@ html, body {
 .landing-logo {
 	display: block;
 	margin: 0 auto;
-	width: 60%;
-	padding-top: 100px;
+	width: 90%;
+	padding-top: 50px;
 	margin-bottom: 160px;
 }
 
@@ -32,5 +34,29 @@ html, body {
 	padding-right: 40px;
 	padding-left: 40px;
 	color: white;
-	font-size: 12pt;
+	font-size: 16pt;
 }	
+
+
+
+
+/* Desktops and Laptops Styling*/
+@media only screen
+and (min-width : 780px) {
+
+	.landing-container {
+	background: image-url("landing-background.JPG");
+	background-repeat: no-repeat;
+	background-position: 63% 40%;
+	height: 100vh;
+}
+
+.landing-logo {
+	display: block;
+	margin: 0 auto;
+	width: 30%;
+	padding-top: 50px;
+	margin-bottom: 160px;
+}
+
+}
