--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<p><%= flash[:error] %></p>
+
+<%= form_for @user, url: users_create_path(@user), html: { method: :post } do |f| %>
+<div>
+	<%= f.text_field :email, :placeholder => "Email", :required => true %>
+</div>
+<div>
+	<%= f.text_field :username, :placeholder => "Username", :required => true %>
+</div>
+<div>
+	<%= f.password_field :password, :placeholder => "Password", :required => true %>
+</div>
+<div>
+	<%= f.submit "Sign Up" %>
+</div>
+<% end %>
