--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,8 @@
 <div class="landing-container">
 	
-<%= image_tag("logo.png", alt: "Black Gold", class: "landing-logo") %>
+	<%= image_tag("logo.png", alt: "Black Gold", class: "landing-logo") %>
 
-<%= link_to("Sign Up with Email", users_new_path, class: "email-login-button") %>
+	<%= link_to("Sign Up with Email", users_new_path, class: "email-signup-button") %>
+	<%= link_to("Log In", users_login_path, class: "email-login-button") %>
 
 </div>
