build log in form for business

--- a/app/views/businesses/login.html.erb
+++ b/app/views/businesses/login.html.erb
@@ -1,1 +1,12 @@
-login.html.erb
+<p><%= flash[:error] %></p>
+
+<%= form_tag('/businesses/find') %>
+<div>
+	<%= text_field_tag 'email', nil, :placeholder => "Email", :required => true  %>
+</div>
+<div>
+	<%= password_field_tag 'password', nil, :placeholder => "Password", :required => true  %>
+</div>
+<div>
+	<%= submit_tag "Log In" %>
+</div>
