--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,2 +1,29 @@
-<h1>Businesses#new</h1>
-<p>Find me in app/views/businesses/new.html.erb</p>
+<p><%= flash[:error] %></p>
+
+<%= form_for @business, url: businesses_create_path, html: {
+	method: :post } do |f| %>
+<div>
+	<%= f.text_field :email, :placeholder => "Email", :required => true  %>
+</div>
+<div>
+	<%= f.password_field :password, :placeholder => "Password", :required => true  %>
+</div>
+<div>
+	<%= f.text_field :business_name, :placeholder => "Business Name", :required => true  %>
+</div>
+<div>
+	<%= f.text_field :street_address, :placeholder => "Street Address", :required => true  %>
+</div>
+<div>
+	<%= f.text_field :city, :placeholder => "City", :required => true  %>
+</div>
+<div>
+	<%= f.text_field :state, :placeholder => "State", :required => true  %>
+</div>
+<div>
+	<%= f.text_field :url, :placeholder => "Website URL", :required => true  %>
+</div>
+<div>
+	<%= f.submit "Sign Up" %>
+</div>
+<% end %>
