--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,3 +1,5 @@
+<p><%= flash[:error] %></p>
+
 <%= form_tag('/users/find') %>
 <div>
 	<%= text_field_tag 'email', nil, :placeholder => "Email", :required => true %>
