add additional buttons for log in/sign up

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,8 @@
 	<%= image_tag("logo.png", alt: "Black Gold", class: "landing-logo") %>
 
 	<%= link_to("Sign Up with Email", users_new_path, class: "email-signup-button") %>
-	<%= link_to("Log In", users_login_path, class: "email-login-button") %>
+	<%= link_to("Log In", users_login_path, class: "email-signup-button") %>
+	<%= link_to("New Businesses", businesses_new_path, class: "email-signup-button") %>
+	<%= link_to("Existing Businesses", businesses_login_path, class: "email-signup-button") %>
 
 </div>
