--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,4 +1,7 @@
 <h1>Businesses#show</h1>
 <p>Find me in app/views/businesses/show.html.erb</p>
 <p> <%= @user.username %></p>
-<a href="<%= logout_path %>">Logout</a>
+
+<% @businesses.each do |biz| %>
+<p><%= biz.business_name %></p>
+<% end %>
