--- a/app/views/businesses/profile.html.erb
+++ b/app/views/businesses/profile.html.erb
@@ -1,3 +1,4 @@
 <p> <%= @business.business_name %></p>
 <p><%= @business.url %></p>
 <a href="<%= logout_path %>">Logout</a>
+<img src="<%= @business.avatar %>">
