--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body class="pushmenu-push">
 	<nav class="pushmenu pushmenu-left">
 		<h3>Menu</h3>
-		<a href="#">Home</a>
+		<a href="<%= root_path %>">Home</a>
 		<a href="#">Nav2</a>
 		<a href="#">Nav3</a>
 		<a href="#">Nav4</a>
