--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -24,6 +24,10 @@
 	<%= f.text_field :url, :placeholder => "Website URL", :required => true  %>
 </div>
 <div>
+<span>Upload Your Business Logo</span>
+	<%= f.file_field :avatar %>
+</div>
+<div>
 	<%= f.submit "Sign Up" %>
 </div>
 <% end %>
