build views with hidden fields that take in lat and long values

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,6 +11,12 @@
 	<%= f.password_field :password, :placeholder => "Password", :required => true %>
 </div>
 <div>
+	<%= f.hidden_field :latitude, :placeholder => "Latitude", :class => 'latitude', :value => params[:latitude] %>
+</div>
+<div>
+	<%= f.hidden_field :longitude, :placeholder => "Longitude", :class => 'longitude', :value => params[:logitude] %>
+</div>
+<div>
 	<%= f.submit "Sign Up" %>
 </div>
 <% end %>
