--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,4 +1,4 @@
-<p><%= flash[:error] %></p>
+<p class='login-error'><%= flash[:error] %></p>
 
 <%= form_tag('/users/find') %>
 <div>
@@ -8,5 +8,11 @@
 	<%= password_field_tag 'password', nil, :placeholder => "Password", :required => true %>
 </div>
 <div>
-	<%= submit_tag "Sign Up" %>
+	<%= hidden_field_tag 'latitude', nil, :placeholder => "Latitude", :class => 'latitude' %>
+</div>
+<div>
+	<%= hidden_field_tag 'longitude', nil, :placeholder => "Longitude", :class => 'longitude' %>
+</div>
+<div>
+	<%= submit_tag "Log In" %>
 </div>
