--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for @business, url: businesses_create_path, html: {
 	method: :post } do |f| %>
 <div>
-	<%= f.text_field :email, :placeholder => "Email", :required => true  %>
+	<%= f.text_field :email, :type => 'email', :placeholder => "Email", :required => true  %>
 </div>
 <div>
 	<%= f.password_field :password, :placeholder => "Password", :required => true  %>
@@ -19,6 +19,9 @@
 </div>
 <div>
 	<%= f.text_field :state, :placeholder => "State", :required => true  %>
+</div>
+<div>
+	<%= f.text_field :zip_code, :placeholder => "Zip Code", :type => 'number', :required => true  %>
 </div>
 <div>
 	<%= f.text_field :url, :placeholder => "Website URL", :required => true  %>
