--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_tag('/users/find') %>
 <div>
-	<%= text_field_tag 'email', nil, :placeholder => "Email", :required => true %>
+	<%= text_field_tag 'email', nil, :placeholder => "Email", :type => 'email', :required => true %>
 </div>
 <div>
 	<%= password_field_tag 'password', nil, :placeholder => "Password", :required => true %>
