user geocoder helper method in controller to display near by businesses in view

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -2,6 +2,6 @@
 <p>Find me in app/views/businesses/show.html.erb</p>
 <p> <%= @user.username %></p>
 
-<% @businesses.each do |biz| %>
+<% @near_biz.each do |biz| %>
 <p><%= biz.business_name %></p>
 <% end %>
