add styling to login pages for users & biz

--- a/app/assets/stylesheets/menu.css.scss
+++ b/app/assets/stylesheets/menu.css.scss
@@ -44,6 +44,7 @@ body {
 
 .pushmenu-left {
 	left: -240px;
+	padding-top: 75px; 
 
 }
 
@@ -77,7 +78,7 @@ nav-list.active {
 	height: 74px;
 	/*display: inline-block;*/
 	width: 100%;
-	/*position: fixed;*/
+	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 9999;
