--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,36 +1,57 @@
-<p><%= flash[:error] %></p>
+<div class="forms-container">
+    <div class="biz login-form">
+        <p class="auth-header">Existing Business Log In</p>
+        <p class="auth-header"><%= flash[:error] %></p>
 
-<%= form_for @business, url: businesses_create_path, html: {
-	method: :post } do |f| %>
-<div>
-	<%= f.text_field :email, :type => 'email', :placeholder => "Email", :required => true  %>
+        <%= form_tag('/businesses/find') %>
+        <div>
+           <%= text_field_tag 'email', nil, :placeholder => "Email", :type => 'email', :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+           <%= password_field_tag 'password', nil, :placeholder => "Password", :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+           <%= submit_tag "Log In", :class => 'auth-button' %>
+       </div>
+   </div>
+   <div class="biz-signup-form">
+    <p class="auth-header">New Businesses Sign Up Here</p>
+
+    <p><%= flash[:error] %></p>
+
+    <%= form_for @business, url: businesses_create_path, html: {
+       method: :post } do |f| %>
+       <div>
+           <%= f.text_field :email, :type => 'email', :placeholder => "Email", :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+           <%= f.password_field :password, :placeholder => "Password", :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+           <%= f.text_field :business_name, :placeholder => "Business Name", :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+           <%= f.text_field :street_address, :placeholder => "Street Address", :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+           <%= f.text_field :city, :placeholder => "City", :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+           <%= f.text_field :state, :placeholder => "State", :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+           <%= f.text_field :zip_code, :placeholder => "Zip Code", :type => 'number', :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+           <%= f.text_field :url, :placeholder => "Website URL", :required => true, :class => 'input-field'  %>
+       </div>
+       <div>
+       <span class="auth-header">Upload Your Business Logo</span>
+        <%= f.file_field :avatar %>
+    </div>
+    <div>
+       <%= f.submit "Sign Up", :class => 'auth-button' %>
+   </div>
+   <% end %>
 </div>
-<div>
-	<%= f.password_field :password, :placeholder => "Password", :required => true  %>
 </div>
-<div>
-	<%= f.text_field :business_name, :placeholder => "Business Name", :required => true  %>
-</div>
-<div>
-	<%= f.text_field :street_address, :placeholder => "Street Address", :required => true  %>
-</div>
-<div>
-	<%= f.text_field :city, :placeholder => "City", :required => true  %>
-</div>
-<div>
-	<%= f.text_field :state, :placeholder => "State", :required => true  %>
-</div>
-<div>
-	<%= f.text_field :zip_code, :placeholder => "Zip Code", :type => 'number', :required => true  %>
-</div>
-<div>
-	<%= f.text_field :url, :placeholder => "Website URL", :required => true  %>
-</div>
-<div>
-<span>Upload Your Business Logo</span>
-	<%= f.file_field :avatar %>
-</div>
-<div>
-	<%= f.submit "Sign Up" %>
-</div>
-<% end %>
