--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<title>BlkGld</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
