fix background image on business login page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,7 +8,7 @@
   background-repeat: no-repeat;
   background-size: cover; 
   background-position: 63% 40%;
-  height: 100vh;
+  /*height: 100vh;*/
 }
 
 .signup-form, .biz {
