--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -33,7 +33,8 @@
   border-radius: 4pt;
   border-style: solid;
   border-color: #FFAA00;
-  background-color: rgba(0, 0, 0, 0.5)
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
 
 }
 
