add responsive styling to header

--- a/app/assets/stylesheets/menu.css.scss
+++ b/app/assets/stylesheets/menu.css.scss
@@ -75,7 +75,7 @@ nav-list.active {
 
 .buttonset {
 	background: #FFAA00;
-	height: 74px;
+	height: 12vh;
 	/*display: inline-block;*/
 	width: 100%;
 	position: fixed;
@@ -91,7 +91,7 @@ nav-list.active {
 
 .open-menu {
 	width: 8.5vh;
-	margin: 21px;
+	margin: 3.5vh;
 	/*padding-left: 4.7vh;*/
 	/*display: inline-block;*/
 	/*vertical-align: middle;*/
@@ -99,7 +99,7 @@ nav-list.active {
 
 .close-menu {
 	width: 6.5vh;
-	margin: 15px;
+	margin: 3vh;
 }
 
 .search-vector {
