--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -10,7 +10,7 @@ html, body {
 }
 
 .landing-container {
-	background: url("landing-background.JPG");
+	background: url("landing-background.jpg");
 	background-repeat: no-repeat;
 	background-size: cover; 
 	background-position: 63% 40%;
