fix all stylesheets with new background image

--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .near-biz-container {
-  background: url("landing-background.JPG");
+  background: url("pyramids.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover; 
