change media queried image for background

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -47,7 +47,7 @@ html, body {
 and (min-width : 780px) {
 
 	.landing-container {
-		background: image-url("landing-background.JPG");
+		background: image-url("pyramids.jpg");
 		background-repeat: no-repeat;
 		background-position: 63% 40%;
 		height: 100vh;
