fix url() for backgrounds to image-url()

--- a/app/assets/stylesheets/business-profile.css
+++ b/app/assets/stylesheets/business-profile.css
@@ -6,7 +6,7 @@
 }
 
 .background-img {
-	background: url("pyramids.jpg");
+	background: image-url("pyramids.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover; 
