--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,7 +4,7 @@
 
 .forms-container {
 	/*padding-top: 20vh;*/
-  background: url("pyramids.jpg");
+  background: image-url("pyramids.jpg");
   background-repeat: no-repeat;
   background-size: cover; 
   background-position: 63% 40%;
