--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,7 +8,7 @@
   background-repeat: no-repeat;
   background-size: cover; 
   background-position: 63% 40%;
-  /*height: 100vh;*/
+  height: 100vh;
 }
 
 .signup-form, .biz {
@@ -77,4 +77,16 @@ input:focus {
   margin-left: 10vh; 
   margin-right: 10vh;
   text-align: center;
+}
+
+/* Desktops and Laptops Styling*/
+@media only screen
+and (min-width : 780px) {
+
+  .forms-container {
+    background: image-url("pyramids.jpg");
+    background-repeat: no-repeat;
+    background-position: 63% 40%;
+    height: 100vh;
+  }
 }
