update to optimized png

--- a/app/assets/stylesheets/business-profile.scss
+++ b/app/assets/stylesheets/business-profile.scss
@@ -6,7 +6,7 @@
 }
 
 .background-img {
-	background: image-url("pyramids.jpg");
+	background: image-url("pyramids.png");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover; 
