--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -10,7 +10,7 @@ html, body {
 }
 
 .landing-container {
-	background: image-url("pyramids.jpg");
+	background: image-url("pyramids.png");
 	background-repeat: no-repeat;
 	background-size: cover; 
 	background-position: 63% 40%;
@@ -47,7 +47,7 @@ html, body {
 and (min-width : 780px) {
 
 	.landing-container {
-		background: image-url("pyramids.jpg");
+		background: image-url("pyramids.png");
 		background-repeat: no-repeat;
 		background-position: 63% 40%;
 		height: 100vh;
